added another area

--- a/index.html
+++ b/index.html
@@ -46,5 +46,202 @@
       </div>
     </header>
     <!-- Header Area End Here  -->
+    <!-- main part start here  -->
+    <main id="main">
+      <div class="container">
+        <div class="main-content">
+          <div class="content-header">
+            <p>Your taking challenge of New Project.</p>
+          </div>
+          <div class="content-body">
+            <h4 class="title">Demo Task</h4>
+            <div class="content-inner-body">
+              <!-- content box  -->
+              <div class="content-box">
+                <div class="content-box__header">Task Heading 1</div>
+                <div class="content-box__body">
+                  <p>
+                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                    Quas et distinctio doloremque sunt repudiandae accusamus
+                    quod, molestias odio similique, labore ad illum totam
+                    dolorem magni unde corporis neque error delectus asperiores
+                    autem voluptatum vel ullam aspernatur! Iure ipsam odio,
+                    vitae corporis veritatis amet magni! Mollitia optio quae
+                    eveniet eaque explicabo rem adipisci quaerat. Ipsam, est
+                    perspiciatis adipisci fuga itaque repudiandae illum beatae
+                    repell
+                  </p>
+                  <div class="down"><i class="bx bx-chevron-down"></i></div>
+                </div>
+              </div>
+              <!-- content box end  -->
+              <div class="content-box">
+                <div class="content-box__header">Task Heading 2</div>
+                <div class="content-box__body">
+                  <div class="title">
+                    <i class="bx bx-chevron-down"></i> Tread A
+                  </div>
+                  <form action="">
+                    <div class="group">
+                      <div class="input-group">
+                        <label for="thread1">Sub Thread 1</label>
+                        <textarea
+                          name=""
+                          id=""
+                          placeholder="Enter Text Here"
+                        ></textarea>
+                      </div>
+                      <div class="input-group">
+                        <label for="thread1">Sub Interpretation 1</label>
+                        <textarea
+                          name=""
+                          id=""
+                          placeholder="Enter Text Here"
+                        ></textarea>
+                      </div>
+                    </div>
+                    <div class="select-group">
+                      <i class="bx bxs-bulb"></i>
+                      <i class="bx bxs-comment-detail"></i>
+                      <select name="" id="">
+                        <option value="category">Select Category</option>
+                        <option value="">Category 1</option>
+                        <option value="">Category 2</option>
+                        <option value="">Category 3</option>
+                      </select>
+                      <select name="" id="">
+                        <option value="category">Select Process</option>
+                        <option value="">Process 1</option>
+                        <option value="">Process 2</option>
+                        <option value="">Process 3</option>
+                      </select>
+                    </div>
+                    <button class="add-thread-btn" type="button">
+                      + Sub Thread
+                    </button>
+                    <div class="input-group">
+                      <label for="thread1">Sub Thread Summery</label>
+                      <textarea
+                        name=""
+                        id=""
+                        placeholder="Enter Text Here"
+                      ></textarea>
+                    </div>
+                    <div class="credit-select">
+                      <div class="credit">
+                        <i class="bx bx-link"></i>Thread Credit
+                        <i class="bx bxs-edit-alt"></i>
+                      </div>
+                      <select name="" id="">
+                        <option value="">Select Emotion.</option>
+                        <option value="">Emotion 1.</option>
+                        <option value="">Emotion 2.</option>
+                      </select>
+                    </div>
+                    <div class="submit-btn">
+                      <button>+ New Thread</button>
+                      <div class="save"><i class="bx bxs-save"></i></div>
+                    </div>
+                    <div class="down"><i class="bx bx-chevron-down"></i></div>
+                  </form>
+                </div>
+              </div>
+            </div>
+            <!-- Content Inner Body  -->
+            <div class="content-inner-body">
+              <!-- content box  -->
+              <div class="content-box">
+                <div class="content-box__header">Task Heading 3</div>
+                <div class="content-box__body">
+                  <div class="input-group tall">
+                    <textarea
+                      name=""
+                      id=""
+                      cols="30"
+                      rows="5"
+                      placeholder="Reflect Per Given Guidelines"
+                    ></textarea>
+                  </div>
+                  <div class="down"><i class="bx bx-chevron-down"></i></div>
+                </div>
+              </div>
+              <!-- content box end  -->
+              <div class="content-box">
+                <div class="content-box__header">Task Heading 2</div>
+                <div class="content-box__body">
+                  <div class="title">
+                    <i class="bx bx-chevron-down"></i> Tread A
+                  </div>
+                  <form action="">
+                    <div class="group">
+                      <div class="input-group">
+                        <label for="thread1">Sub Thread 1</label>
+                        <textarea
+                          name=""
+                          id=""
+                          placeholder="Enter Text Here"
+                        ></textarea>
+                      </div>
+                      <div class="input-group">
+                        <label for="thread1">Sub Interpretation 1</label>
+                        <textarea
+                          name=""
+                          id=""
+                          placeholder="Enter Text Here"
+                        ></textarea>
+                      </div>
+                    </div>
+                    <div class="select-group">
+                      <i class="bx bxs-bulb"></i>
+                      <i class="bx bxs-comment-detail"></i>
+                      <select name="" id="">
+                        <option value="category">Select Category</option>
+                        <option value="">Category 1</option>
+                        <option value="">Category 2</option>
+                        <option value="">Category 3</option>
+                      </select>
+                      <select name="" id="">
+                        <option value="category">Select Process</option>
+                        <option value="">Process 1</option>
+                        <option value="">Process 2</option>
+                        <option value="">Process 3</option>
+                      </select>
+                    </div>
+                    <button class="add-thread-btn" type="button">
+                      + Sub Thread
+                    </button>
+                    <div class="input-group">
+                      <label for="thread1">Sub Thread Summery</label>
+                      <textarea
+                        name=""
+                        id=""
+                        placeholder="Enter Text Here"
+                      ></textarea>
+                    </div>
+                    <div class="credit-select">
+                      <div class="credit">
+                        <i class="bx bx-link"></i>Thread Credit
+                        <i class="bx bxs-edit-alt"></i>
+                      </div>
+                      <select name="" id="">
+                        <option value="">Select Emotion.</option>
+                        <option value="">Emotion 1.</option>
+                        <option value="">Emotion 2.</option>
+                      </select>
+                    </div>
+                    <div class="submit-btn">
+                      <button>+ New Thread</button>
+                      <div class="save"><i class="bx bxs-save"></i></div>
+                    </div>
+                    <div class="down"><i class="bx bx-chevron-down"></i></div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+    <!-- main part end here  -->
   </body>
 </html>
