done created design of main content

--- a/index.html
+++ b/index.html
@@ -167,78 +167,126 @@
               </div>
               <!-- content box end  -->
               <div class="content-box">
-                <div class="content-box__header">Task Heading 2</div>
+                <div class="content-box__header">Task Heading 4</div>
                 <div class="content-box__body">
-                  <div class="title">
-                    <i class="bx bx-chevron-down"></i> Tread A
+                  <div class="pdf-format">
+                    <iframe
+                      id="viewerPro"
+                      style="width: 100%; height: 606px"
+                      src="https://drive.google.com/file/d/1Pxw83bTKE3KkOyYnwm1u6DSVjntSrNTp/preview"
+                      data-dashlane-frameid="582"
+                    ></iframe>
                   </div>
-                  <form action="">
-                    <div class="group">
-                      <div class="input-group">
-                        <label for="thread1">Sub Thread 1</label>
-                        <textarea
-                          name=""
-                          id=""
-                          placeholder="Enter Text Here"
-                        ></textarea>
-                      </div>
-                      <div class="input-group">
-                        <label for="thread1">Sub Interpretation 1</label>
-                        <textarea
-                          name=""
-                          id=""
-                          placeholder="Enter Text Here"
-                        ></textarea>
-                      </div>
+                  <div class="down"><i class="bx bx-chevron-down"></i></div>
+                </div>
+              </div>
+            </div>
+            <!-- Content Inner Body  -->
+            <div class="content-inner-body">
+              <!-- content box  -->
+              <div class="content-box">
+                <div class="content-box__header">Task Heading 5</div>
+                <div class="content-box__body">
+                  <form action="" class="task-form-5">
+                    <div class="title bg-color">
+                      <i class="bx bx-chevron-down"></i> Introduction
                     </div>
-                    <div class="select-group">
-                      <i class="bx bxs-bulb"></i>
-                      <i class="bx bxs-comment-detail"></i>
-                      <select name="" id="">
-                        <option value="category">Select Category</option>
-                        <option value="">Category 1</option>
-                        <option value="">Category 2</option>
-                        <option value="">Category 3</option>
-                      </select>
-                      <select name="" id="">
-                        <option value="category">Select Process</option>
-                        <option value="">Process 1</option>
-                        <option value="">Process 2</option>
-                        <option value="">Process 3</option>
-                      </select>
+
+                    <div class="input-group less-wide">
+                      <textarea
+                        name=""
+                        id=""
+                        cols="30"
+                        rows="5"
+                        placeholder="Enter Introduction"
+                      ></textarea>
                     </div>
-                    <button class="add-thread-btn" type="button">
-                      + Sub Thread
-                    </button>
-                    <div class="input-group">
-                      <label for="thread1">Sub Thread Summery</label>
+                    <div class="title">
+                      <i class="bx bx-chevron-down"></i> Tread A
+                    </div>
+                    <div class="input-group less-wide">
+                      <label for="thread1">Example 1</label>
                       <textarea
                         name=""
                         id=""
                         placeholder="Enter Text Here"
                       ></textarea>
                     </div>
-                    <div class="credit-select">
-                      <div class="credit">
-                        <i class="bx bx-link"></i>Thread Credit
-                        <i class="bx bxs-edit-alt"></i>
-                      </div>
-                      <select name="" id="">
-                        <option value="">Select Emotion.</option>
-                        <option value="">Emotion 1.</option>
-                        <option value="">Emotion 2.</option>
-                      </select>
+                    <div class="example-btn">
+                      <button class="add-thread-btn" type="button">
+                        + Add Example
+                      </button>
                     </div>
-                    <div class="submit-btn">
+                    <div class="input-group less-wide">
+                      <label for="thread1">Argument for Thread A</label>
+                      <textarea
+                        name=""
+                        id=""
+                        placeholder="Enter Text Here"
+                      ></textarea>
+                    </div>
+                    <div class="submit-btn example-btn">
                       <button>+ New Thread</button>
+                    </div>
+
+                    <div class="title bg-color">
+                      <i class="bx bx-chevron-down"></i> Conclusion
+                    </div>
+                    <div class="input-group less-wide">
+                      <textarea
+                        name=""
+                        id=""
+                        cols="30"
+                        rows="5"
+                        placeholder="Enter Conclusion"
+                      ></textarea>
+                    </div>
+                    <div class="submit-btn example-btn">
                       <div class="save"><i class="bx bxs-save"></i></div>
                     </div>
                     <div class="down"><i class="bx bx-chevron-down"></i></div>
                   </form>
                 </div>
               </div>
+              <!-- content box end  -->
+              <div class="content-box">
+                <div class="content-box mb-2">
+                  <div class="content-box__header">Task Heading 6</div>
+                  <div class="content-box__body">
+                    <div class="audio-format">
+                      <audio src="" controls></audio>
+                    </div>
+
+                    <div class="down">
+                      <i class="bx bx-chevron-down"></i>
+                    </div>
+                  </div>
+                </div>
+                <div class="content-box">
+                  <div class="content-box__header">Task Heading 7</div>
+                  <div class="content-box__body">
+                    <div class="video-format">
+                      <iframe
+                        style="width: 100%; height: 306px"
+                        src="https://www.youtube.com/embed/zgtQuxdI4iY"
+                        title="YouTube video player"
+                        frameborder="0"
+                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                        allowfullscreen
+                      ></iframe>
+                    </div>
+
+                    <div class="down">
+                      <i class="bx bx-chevron-down"></i>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
+        </div>
+        <div class="submit-btn">
+          <button>Next</button>
         </div>
       </div>
     </main>
