design part done for this application

--- a/index.html
+++ b/index.html
@@ -50,6 +50,35 @@
     <main id="main">
       <div class="container">
         <div class="main-content">
+          <!-- Sidebar Menu  -->
+          <aside class="site-dashboard">
+            <div class="title">
+              <p>Journey Board</p>
+              <div class="btn">
+                <i class="bx bx-menu"></i>
+              </div>
+            </div>
+            <ol>
+              <li>
+                <strong>Demo Task</strong>
+                <ul>
+                  <li>
+                    <a href="/">Task Heading 1</a>
+                  </li>
+                  <li>
+                    <a href="/">Task Heading 1</a>
+                  </li>
+                  <li>
+                    <a href="/">Task Heading 1</a>
+                  </li>
+                  <li>
+                    <a href="/">Task Heading 1</a>
+                  </li>
+                </ul>
+              </li>
+            </ol>
+          </aside>
+          <!-- Sidebar Menu End  -->
           <div class="content-header">
             <p>Your taking challenge of New Project.</p>
           </div>
