make website responsive

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     />
     <!-- Stylesheet linking here  -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Responsive style  -->
+    <link rel="stylesheet" href="./assets/css/_responsive.css" />
   </head>
   <body>
     <!-- Header Area Start Here  -->
@@ -54,7 +56,7 @@
           <aside class="site-dashboard">
             <div class="title">
               <p>Journey Board</p>
-              <div class="btn">
+              <div class="btn" id="dashboard-btn">
                 <i class="bx bx-menu"></i>
               </div>
             </div>
@@ -320,5 +322,7 @@
       </div>
     </main>
     <!-- main part end here  -->
+
+    <script src="./assets/js/app.js"></script>
   </body>
 </html>
