--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <ol>
               <li>
                 <strong>Demo Task</strong>
-                <ul>
+                <ul class="task-title-area">
                   <li>
                     <a href="/">Task Heading 1</a>
                   </li>
@@ -203,7 +203,7 @@
                   <div class="pdf-format">
                     <iframe
                       id="viewerPro"
-                      style="width: 100%; height: 606px"
+                      style="width: 100%; height: 556px"
                       src="https://drive.google.com/file/d/1Pxw83bTKE3KkOyYnwm1u6DSVjntSrNTp/preview"
                       data-dashlane-frameid="582"
                     ></iframe>
@@ -299,7 +299,7 @@
                     <div class="video-format">
                       <iframe
                         style="width: 100%; height: 306px"
-                        src="https://www.youtube.com/embed/zgtQuxdI4iY"
+                        src="https://www.youtube.com/embed/s8H0Sx7jy7c"
                         title="YouTube video player"
                         frameborder="0"
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
