added accordion facilities

--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
               <!-- content box  -->
               <div class="content-box">
                 <div class="content-box__header">Task Heading 5</div>
-                <div class="content-box__body">
+                <div class="content-box__body task-form-area">
                   <form action="" class="task-form-5">
                     <div class="title bg-color">
                       <i class="bx bx-chevron-down"></i> Introduction
@@ -272,15 +272,15 @@
                         placeholder="Enter Conclusion"
                       ></textarea>
                     </div>
-                    <div class="submit-btn example-btn">
+                    <div class="submit-btn example-btn task-save-btn">
                       <div class="save"><i class="bx bxs-save"></i></div>
+                      <div class="down"><i class="bx bx-chevron-down"></i></div>
                     </div>
-                    <div class="down"><i class="bx bx-chevron-down"></i></div>
                   </form>
                 </div>
               </div>
               <!-- content box end  -->
-              <div class="content-box">
+              <div class="content-boxes">
                 <div class="content-box mb-2">
                   <div class="content-box__header">Task Heading 6</div>
                   <div class="content-box__body">
@@ -316,7 +316,7 @@
             </div>
           </div>
         </div>
-        <div class="submit-btn">
+        <div class="next-btn submit-btn">
           <button>Next</button>
         </div>
       </div>
