--- a/index.html
+++ b/index.html
@@ -284,10 +284,17 @@
                 <div class="content-box mb-2">
                   <div class="content-box__header">Task Heading 6</div>
                   <div class="content-box__body">
-                    <div class="audio-format">
+                    <!-- <div class="audio-format">
                       <audio src="" controls></audio>
-                    </div>
-
+                    </div> -->
+                    <iframe
+                      style="width: 100%; height: 106px"
+                      src="https://drive.google.com/file/d/1dBBYQsz2yt3vc4YMkRmVC3nuTBbq2GON/preview"
+                      title="YouTube video player"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
                     <div class="down">
                       <i class="bx bx-chevron-down"></i>
                     </div>
